resources/demo-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kube-demo
  namespace: kube-demo
  labels:
    app: kube-demo
    tier: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-demo
      tier: web
  template:
    metadata:
      labels:
        app: kube-demo
        tier: web
    spec:
      containers:
      - name: kube-demo
        image: carsonoid/kube-decon:latest
        ports:
        - containerPort: 2015
