resources/demo-service.yml
kind: Service
apiVersion: v1
metadata:
  name: kube-demo
  namespace: kube-demo
spec:
  selector:
    app: kube-demo
    tier: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2015
    name: http
